[gd_scene load_steps=9 format=2]

[ext_resource path="res://overworld/overworld.gd" type="Script" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/enemy-world.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tileset.tres" type="MeshLibrary" id=4]
[ext_resource path="res://utility/LevelData.gd" type="Script" id=5]
[ext_resource path="res://utility/LevelChanger.tscn" type="PackedScene" id=6]

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -19.0117, 2.04918, -3.46112, 0, 0, 0, 0, 0, 0, -16.7331, 1.53676, -0.720335, 0, 0, 0, 0, 0, 0, 16.3579, 2.7086, 2.14902, 0, 0, 0, 0, 0, 0, 16.3773, 1.63844, -2.42047, 0, 0, 0, 0, 0, 0, -19.0117, 2.04918, -3.46112 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="Environment" id=4]
ambient_light_color = Color( 0.368627, 0.392157, 0.454902, 1 )

[node name="Overworld" type="Node"]
script = ExtResource( 1 )
enemy_scene = ExtResource( 3 )
level_name = "zero"

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -0.0338917, 16.5385, 33.4831 )

[node name="SpawnPath" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -23.0803 )
curve = SubResource( 3 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 0.971566, -0.172015, 0.162701, 0.155613, 0.981811, 0.108773, -0.178452, -0.0803612, 0.980661, 0.322496, 2.14074, 0.758573 )
offset = 20.7323

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 12 )

[node name="GridMap" type="GridMap" parent="."]
transform = Transform( 2, 0, 0, 0, 4, 0, 0, 0, 2, 0, 0, 0 )
mesh_library = ExtResource( 4 )
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 655362, 1, 0, 655362, 2, 0, 1441792, 65534, 0, 1048576, 65535, 0, 655362, 0, 1, 655362, 1, 1, 655362, 2, 1, 1441792, 65534, 1, 1048576, 65535, 1, 655362, 0, 2, 655362, 1, 2, 655362, 2, 2, 1441792, 65534, 2, 1048576, 65535, 2, 655362, 0, 3, 655362, 1, 3, 655362, 2, 3, 1441792, 65534, 3, 1048576, 65535, 3, 655362, 0, 4, 2, 1, 4, 2, 2, 4, 1441792, 65534, 4, 1048576, 65535, 4, 2, 0, 5, 2, 1, 5, 2, 2, 5, 1441792, 65534, 5, 1048576, 65535, 5, 2, 0, 6, 2, 1, 6, 2, 2, 6, 1441792, 65534, 6, 1048576, 65535, 6, 2, 0, 7, 2, 1, 7, 2, 2, 7, 1441792, 65534, 7, 1048576, 65535, 7, 2, 0, 8, 2, 1, 8, 2, 2, 8, 1441792, 65534, 8, 1048576, 65535, 8, 2, 0, 9, 2, 1, 9, 2, 2, 9, 1441792, 65534, 9, 1048576, 65535, 9, 2, 0, 10, 2, 1, 10, 2, 2, 10, 1441792, 65534, 10, 1048576, 65535, 10, 2, 0, 11, 655360, 1, 11, 655360, 2, 11, 1441793, 65534, 11, 655361, 65535, 11, 655360, 0, 65514, 0, 1, 65514, 0, 2, 65514, 1, 65534, 65514, 1048577, 65535, 65514, 0, 0, 65515, 655362, 1, 65515, 655362, 2, 65515, 1441792, 65534, 65515, 1048576, 65535, 65515, 655362, 0, 65516, 655362, 1, 65516, 655362, 2, 65516, 1441792, 65534, 65516, 1048576, 65535, 65516, 655362, 0, 65517, 655362, 1, 65517, 655362, 2, 65517, 1441792, 65534, 65517, 1048576, 65535, 65517, 655362, 0, 65518, 655362, 1, 65518, 655362, 2, 65518, 1441792, 65534, 65518, 1048576, 65535, 65518, 655362, 0, 65519, 655362, 1, 65519, 655362, 2, 65519, 1441792, 65534, 65519, 1048576, 65535, 65519, 655362, 0, 65520, 655362, 1, 65520, 655362, 2, 65520, 1441792, 65534, 65520, 1048576, 65535, 65520, 655362, 0, 65521, 655362, 1, 65521, 655362, 2, 65521, 3, 3, 65521, 0, 4, 65521, 0, 5, 65521, 0, 6, 65521, 0, 7, 65521, 0, 8, 65521, 0, 9, 65521, 0, 10, 65521, 0, 11, 65521, 1, 65515, 65521, 1048577, 65516, 65521, 0, 65517, 65521, 0, 65518, 65521, 0, 65519, 65521, 0, 65520, 65521, 0, 65521, 65521, 1, 65524, 65521, 1048577, 65525, 65521, 0, 65526, 65521, 0, 65527, 65521, 0, 65528, 65521, 0, 65529, 65521, 0, 65530, 65521, 0, 65531, 65521, 0, 65532, 65521, 0, 65533, 65521, 0, 65534, 65521, 1048579, 65535, 65521, 655362, 0, 65522, 655362, 1, 65522, 655362, 2, 65522, 655362, 3, 65522, 655362, 4, 65522, 655362, 5, 65522, 655362, 6, 65522, 655362, 7, 65522, 655362, 8, 65522, 655362, 9, 65522, 655362, 10, 65522, 655362, 11, 65522, 1441792, 65515, 65522, 1048576, 65516, 65522, 655362, 65517, 65522, 655362, 65518, 65522, 655362, 65519, 65522, 655362, 65520, 65522, 655362, 65521, 65522, 1441792, 65524, 65522, 1048576, 65525, 65522, 655362, 65526, 65522, 655362, 65527, 65522, 655362, 65528, 65522, 655362, 65529, 65522, 655362, 65530, 65522, 655362, 65531, 65522, 655362, 65532, 65522, 655362, 65533, 65522, 655362, 65534, 65522, 655362, 65535, 65522, 655362, 0, 65523, 655362, 1, 65523, 655362, 2, 65523, 655362, 3, 65523, 655362, 4, 65523, 655362, 5, 65523, 655362, 6, 65523, 655362, 7, 65523, 655362, 8, 65523, 655362, 9, 65523, 655362, 10, 65523, 655362, 11, 65523, 1441792, 65515, 65523, 1048576, 65516, 65523, 655362, 65517, 65523, 655362, 65518, 65523, 655362, 65519, 65523, 655362, 65520, 65523, 655362, 65521, 65523, 1441792, 65524, 65523, 1048576, 65525, 65523, 655362, 65526, 65523, 655362, 65527, 65523, 655362, 65528, 65523, 655362, 65529, 65523, 655362, 65530, 65523, 655362, 65531, 65523, 655362, 65532, 65523, 655362, 65533, 65523, 655362, 65534, 65523, 655362, 65535, 65523, 655362, 0, 65524, 655362, 1, 65524, 655362, 2, 65524, 655362, 3, 65524, 655362, 4, 65524, 655362, 5, 65524, 655362, 6, 65524, 655362, 7, 65524, 655362, 8, 65524, 655362, 9, 65524, 655362, 10, 65524, 655362, 11, 65524, 1441792, 65515, 65524, 1048576, 65516, 65524, 655362, 65517, 65524, 655362, 65518, 65524, 655362, 65519, 65524, 655362, 65520, 65524, 655362, 65521, 65524, 3, 65522, 65524, 0, 65523, 65524, 0, 65524, 65524, 1048579, 65525, 65524, 655362, 65526, 65524, 655362, 65527, 65524, 655362, 65528, 65524, 655362, 65529, 65524, 655362, 65530, 65524, 655362, 65531, 65524, 655362, 65532, 65524, 655362, 65533, 65524, 655362, 65534, 65524, 655362, 65535, 65524, 655362, 0, 65525, 655362, 1, 65525, 655362, 2, 65525, 655362, 3, 65525, 655362, 4, 65525, 655362, 5, 65525, 655362, 6, 65525, 655362, 7, 65525, 655362, 8, 65525, 655362, 9, 65525, 655362, 10, 65525, 655362, 11, 65525, 1441792, 65515, 65525, 1048576, 65516, 65525, 655362, 65517, 65525, 655362, 65518, 65525, 655362, 65519, 65525, 655362, 65520, 65525, 655362, 65521, 65525, 655362, 65522, 65525, 655362, 65523, 65525, 655362, 65524, 65525, 655362, 65525, 65525, 655362, 65526, 65525, 655362, 65527, 65525, 655362, 65528, 65525, 655362, 65529, 65525, 655362, 65530, 65525, 655362, 65531, 65525, 655362, 65532, 65525, 655362, 65533, 65525, 655362, 65534, 65525, 655362, 65535, 65525, 655362, 0, 65526, 655362, 1, 65526, 655362, 2, 65526, 655362, 3, 65526, 655362, 4, 65526, 655362, 5, 65526, 655362, 6, 65526, 655362, 7, 65526, 655362, 8, 65526, 655362, 9, 65526, 655362, 10, 65526, 655362, 11, 65526, 1441792, 65515, 65526, 1048576, 65516, 65526, 655362, 65517, 65526, 655362, 65518, 65526, 655362, 65519, 65526, 655362, 65520, 65526, 655362, 65521, 65526, 655362, 65522, 65526, 655362, 65523, 65526, 655362, 65524, 65526, 655362, 65525, 65526, 655362, 65526, 65526, 655362, 65527, 65526, 655362, 65528, 65526, 655362, 65529, 65526, 655362, 65530, 65526, 655362, 65531, 65526, 655362, 65532, 65526, 655362, 65533, 65526, 655362, 65534, 65526, 655362, 65535, 65526, 655362, 0, 65527, 655362, 1, 65527, 655362, 2, 65527, 655362, 3, 65527, 655362, 4, 65527, 655362, 5, 65527, 655362, 6, 65527, 655362, 7, 65527, 655362, 8, 65527, 655362, 9, 65527, 655362, 10, 65527, 655362, 11, 65527, 1441792, 65515, 65527, 1048576, 65516, 65527, 655362, 65517, 65527, 655362, 65518, 65527, 655362, 65519, 65527, 655362, 65520, 65527, 655362, 65521, 65527, 655362, 65522, 65527, 655362, 65523, 65527, 655362, 65524, 65527, 655362, 65525, 65527, 655362, 65526, 65527, 655362, 65527, 65527, 655362, 65528, 65527, 655362, 65529, 65527, 655362, 65530, 65527, 655362, 65531, 65527, 655362, 65532, 65527, 655362, 65533, 65527, 655362, 65534, 65527, 655362, 65535, 65527, 655362, 0, 65528, 655362, 1, 65528, 655362, 2, 65528, 655362, 3, 65528, 655362, 4, 65528, 655362, 5, 65528, 655362, 6, 65528, 655362, 7, 65528, 655362, 8, 65528, 655362, 9, 65528, 655362, 10, 65528, 655362, 11, 65528, 1441792, 65515, 65528, 1048576, 65516, 65528, 655362, 65517, 65528, 655362, 65518, 65528, 655362, 65519, 65528, 655362, 65520, 65528, 655362, 65521, 65528, 1441795, 65522, 65528, 655360, 65523, 65528, 655360, 65524, 65528, 655363, 65525, 65528, 655362, 65526, 65528, 655362, 65527, 65528, 655362, 65528, 65528, 655362, 65529, 65528, 655362, 65530, 65528, 655362, 65531, 65528, 655362, 65532, 65528, 655362, 65533, 65528, 655362, 65534, 65528, 655362, 65535, 65528, 655362, 0, 65529, 655362, 1, 65529, 655362, 2, 65529, 655362, 3, 65529, 655362, 4, 65529, 655362, 5, 65529, 655362, 6, 65529, 655362, 7, 65529, 655362, 8, 65529, 655362, 9, 65529, 655362, 10, 65529, 655362, 11, 65529, 1441792, 65515, 65529, 1048576, 65516, 65529, 655362, 65517, 65529, 655362, 65518, 65529, 655362, 65519, 65529, 655362, 65520, 65529, 655362, 65521, 65529, 1441792, 65524, 65529, 1048576, 65525, 65529, 655362, 65526, 65529, 655362, 65527, 65529, 655362, 65528, 65529, 655362, 65529, 65529, 655362, 65530, 65529, 655362, 65531, 65529, 655362, 65532, 65529, 655362, 65533, 65529, 655362, 65534, 65529, 655362, 65535, 65529, 655362, 0, 65530, 655362, 1, 65530, 655362, 2, 65530, 655362, 3, 65530, 655362, 4, 65530, 655362, 5, 65530, 655362, 6, 65530, 655362, 7, 65530, 655362, 8, 65530, 655362, 9, 65530, 655362, 10, 65530, 655362, 11, 65530, 1441792, 65515, 65530, 1048576, 65516, 65530, 655362, 65517, 65530, 655362, 65518, 65530, 655362, 65519, 65530, 655362, 65520, 65530, 655362, 65521, 65530, 1441792, 65524, 65530, 1048576, 65525, 65530, 655362, 65526, 65530, 655362, 65527, 65530, 655362, 65528, 65530, 655362, 65529, 65530, 655362, 65530, 65530, 655362, 65531, 65530, 655362, 65532, 65530, 655362, 65533, 65530, 655362, 65534, 65530, 655362, 65535, 65530, 655362, 0, 65531, 655362, 1, 65531, 655362, 2, 65531, 655362, 3, 65531, 655362, 4, 65531, 1441794, 5, 65531, 1441794, 6, 65531, 655362, 7, 65531, 655362, 8, 65531, 655362, 9, 65531, 655362, 10, 65531, 655362, 11, 65531, 1441792, 65515, 65531, 655361, 65516, 65531, 655360, 65517, 65531, 655360, 65518, 65531, 655360, 65519, 65531, 655360, 65520, 65531, 655360, 65521, 65531, 1441793, 65524, 65531, 1048576, 65525, 65531, 655362, 65526, 65531, 655362, 65527, 65531, 655362, 65528, 65531, 655362, 65529, 65531, 655362, 65530, 65531, 655362, 65531, 65531, 655362, 65532, 65531, 655362, 65533, 65531, 655362, 65534, 65531, 655362, 65535, 65531, 655362, 0, 65532, 655362, 1, 65532, 655362, 2, 65532, 1441795, 3, 65532, 655360, 4, 65532, 655360, 5, 65532, 655360, 6, 65532, 655360, 7, 65532, 655360, 8, 65532, 655360, 9, 65532, 655360, 10, 65532, 655360, 11, 65532, 1441793, 65524, 65532, 655361, 65525, 65532, 655360, 65526, 65532, 655360, 65527, 65532, 655360, 65528, 65532, 655360, 65529, 65532, 655360, 65530, 65532, 655360, 65531, 65532, 655360, 65532, 65532, 655360, 65533, 65532, 655360, 65534, 65532, 655363, 65535, 65532, 655362, 0, 65533, 655362, 1, 65533, 655362, 2, 65533, 1441792, 65534, 65533, 1048576, 65535, 65533, 655362, 0, 65534, 655362, 1, 65534, 655362, 2, 65534, 1441792, 65534, 65534, 1048576, 65535, 65534, 655362, 0, 65535, 655362, 1, 65535, 655362, 2, 65535, 1441792, 65534, 65535, 1048576, 65535, 65535, 655362 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="LevelData" type="Node" parent="."]
script = ExtResource( 5 )

[node name="LevelChanger" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -43 )
next_level_id = 0.2

[connection signal="battleStart" from="Player" to="." method="_on_Player_battleStart"]
[connection signal="levelchanger_change" from="LevelChanger" to="." method="_on_LevelChanger_levelchanger_change"]
